# verdict

./: CLAUDE.md  LICENSE
.github/workflows/: audit.yml  build_and_test.yml  clippy.yml  fmt.yml  python-build-test.yml  python-build.yml  python-test.yml  rust-audit.yml  rust-build-test.yml  rust-clippy.yml  rust-fmt.yml
crates/verdict-core/: Cargo.toml
crates/verdict-core/src/: csv_loader.rs  dataset.rs  errors.rs  lib.rs
crates/verdict-core/src/dataset/: column.rs  mod.rs  ops.rs  schema.rs
crates/verdict-core/src/rules/: mod.rs
crates/verdict-core/tests/: tests.rs
crates/verdict-core/tests/fixtures/: all_types.csv  with_nulls.csv
crates/verdict-csv/: Cargo.toml
crates/verdict-py/: Cargo.toml  benchmark.py  explore.py  main.py  pyproject.toml  sample.csv
crates/verdict-py/src/: lib.rs
crates/verdict-py/tests/: test_bindings.py
docs/: architecture.md  dev-plan.md
